--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,11 +15,14 @@ dependencies:
   google_fonts: ^6.2.1
   flutter_animate: ^4.5.0
   url_launcher: ^6.2.5
+  firebase_core: ^4.3.0
+  cloud_firestore: ^6.1.1
+  firebase_auth: ^6.1.3
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^5.0.0
+  flutter_lints: ^6.0.0
 
 flutter:
   uses-material-design: true
