--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,8 @@ dependencies:
   firebase_core: ^4.3.0
   cloud_firestore: ^6.1.1
   firebase_auth: ^6.1.3
+  firebase_storage: ^13.0.5
+  file_picker: ^5.3.0
 
 dev_dependencies:
   flutter_test:
