--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,8 +19,15 @@ dependencies:
   cloud_firestore: ^6.1.1
   firebase_auth: ^6.1.3
   firebase_storage: ^13.0.5
-  file_picker: ^5.3.0
-  flutter_dotenv: ^5.1.0
+  file_picker: ^10.3.8
+  flutter_dotenv: ^6.0.0
+  google_mlkit_text_recognition: ^0.15.0
+  google_mlkit_translation: ^0.13.0
+  image_picker: ^1.2.1
+  pdf: ^3.11.3
+  path_provider: ^2.1.5
+  flutter_pdfview: ^1.3.2
+
 
 dev_dependencies:
   flutter_test:
