--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,7 +4,8 @@ publish_to: 'none'
 version: 1.0.0+1
 
 environment:
-  sdk: ^3.9.2
+  sdk: ">=3.3.0 <4.0.0"
+
 
 dependencies:
   flutter:
@@ -19,8 +20,15 @@ dependencies:
   cloud_firestore: ^6.1.1
   firebase_auth: ^6.1.3
   firebase_storage: ^13.0.5
-  file_picker: ^5.3.0
-  flutter_dotenv: ^5.1.0
+  file_picker: ^10.3.8
+  flutter_dotenv: ^6.0.0
+  image_picker: ^1.0.7
+  google_mlkit_text_recognition: ^0.15.0
+  google_mlkit_translation: ^0.13.0
+  path_provider: ^2.0.15
+  pdf: ^3.10.1
+  permission_handler: ^12.0.1
+  flutter_pdfview: ^1.4.3
 
 dev_dependencies:
   flutter_test:
