--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,23 +22,15 @@ dependencies:
   firebase_storage: ^13.0.5
   file_picker: ^10.3.8
   flutter_dotenv: ^6.0.0
-<<<<<<< HEAD
-  image_picker: ^1.0.7
+  image_picker: ^1.2.1
   google_mlkit_text_recognition: ^0.15.0
   google_mlkit_translation: ^0.13.0
-  path_provider: ^2.0.15
-  pdf: ^3.10.1
+  google_mlkit_language_id: ^0.12.0
+  path_provider: ^2.1.5
+  pdf: ^3.11.3
   permission_handler: ^12.0.1
   flutter_pdfview: ^1.4.3
-=======
-  google_mlkit_text_recognition: ^0.15.0
-  google_mlkit_translation: ^0.13.0
-  image_picker: ^1.2.1
-  pdf: ^3.11.3
-  path_provider: ^2.1.5
-  flutter_pdfview: ^1.3.2
-
->>>>>>> 3268ed02d21c8b5387ffb1bb218f054aaf1db5d9
+  share_plus: ^10.1.4
 
 dev_dependencies:
   flutter_test:
