--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,8 @@ dependencies:
   file_picker: ^10.3.8
   flutter_dotenv: ^6.0.0
   image_picker: ^1.2.1
+  flutter_doc_scanner: ^0.0.16
+  image: ^4.1.7
   google_mlkit_text_recognition: ^0.15.0
   google_mlkit_translation: ^0.13.0
   google_mlkit_language_id: ^0.12.0
