--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   permission_handler: ^12.0.1
   flutter_pdfview: ^1.4.3
   share_plus: ^10.1.4
+  pdfx: ^2.6.0
 
 dev_dependencies:
   flutter_test:
